v6.9.9 - Fixed embedded video wrapped bug
- Added style for a coupon
- Added variable for $bp-desk

--- a/frontend/sass/02-variables.scss
+++ b/frontend/sass/02-variables.scss
@@ -52,6 +52,7 @@ $background-icon		: 	'https://onepagelove.com/wp-content/themes/onepagelove/img/
 
 $bp-desklg				: 1800px;
 $bp-desksm 		 	 	: 1430px;
+$bp-desk 		 	 	: 1340px;
 $bp-notebook 		 	: 1040px;
 $bp-tablet		 		: 840px;
 $bp-mobile 		 		: 500px;
